--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,11 @@
-== README
+== SKATE OR BYE!
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Skate or Bye! es una aplicación web para patinadores/futuros patinadores:
 
-Things you may want to cover:
+* Encuentra los mejores spots: tienes un mapa con los sitios para patinar (spots) que la gente ha encontrado, en cada uno de ellos puedes ver fotos del mismo, el nivel de los patinadores y los vídeos con los trucos que estos han subido a través de Vine o Instagram. Podrás puntuarlos y subir tus propios vídeos, además de poder añadir nuevos spots a través de tu ubicación.
 
-* Ruby version
+* Organiza quedadas: selecciona el spot, el día y la hora y cualquiera podrá unirse a la quedada como patinador, profesor, aprendiz o espectador. ¡No necesitas saber patinar para usar Skate or Bye!
 
-* System dependencies
+* Y si eres un competidor nato... ¡desafía a tus amigos!: elige a tu amigo, el truco que quieres que haga y el lugar en el que tendrá que hacerlo. A él le llegará tu desafío, si lo acepta tendrá que subir un vídeo intentándolo y tu decidirás si lo ha superado.
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* Tecnologías utilizadas: HTML5, CSS3, JavaScript, jQuery, AJAX, Bootstrap, Ruby on Rails, Google Maps API.
