--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== SKATE OR BYE!
+== SKATE OR BYE! (http://skateorbye.herokuapp.com/)
 
 Skate or Bye! es una aplicación web para patinadores/futuros patinadores:
 
@@ -9,5 +9,3 @@ Skate or Bye! es una aplicación web para patinadores/futuros patinadores:
 * Y si eres un competidor nato... ¡desafía a tus amigos!: elige a tu amigo, el truco que quieres que haga y el lugar en el que tendrá que hacerlo. A él le llegará tu desafío, si lo acepta tendrá que subir un vídeo intentándolo y tu decidirás si lo ha superado.
 
 * Tecnologías utilizadas: HTML5, CSS3, JavaScript, jQuery, AJAX, Bootstrap, Ruby on Rails, Google Maps API, Heroku.
-
-http://skateorbye.herokuapp.com/
